--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
 .bottom {
     margin-top: 150px;
 }
@@ -27,7 +33,7 @@ body {
     border-radius: 5px;
     outline: none;
 }
-.button {
+.button{
     text-align: center;
     padding: 10px 40px;
     font-size: 18px;
@@ -36,8 +42,20 @@ body {
     color: #fff;
     margin-left: 235px;
     margin-top: 30px;
+    transition: 0.5s;
+    border: none;
 }
-.botton:hover {
+
+a{
+    color: white;
+    transition: 0.5s;
+}
+
+button:hover a{
+    color: black;
+}
+
+.button:hover {
     cursor: pointer;
     background-color: #fff;
     color: black;
